--- a/clients/android/app/src/main/res/values-night/colors.xml
+++ b/clients/android/app/src/main/res/values-night/colors.xml
@@ -15,6 +15,8 @@
   <color name="white">#FFFFFF</color>
   <color name="grey">#787878</color>
 
+  <color name="transparent">#00000000</color>
+
   <color name="drawingUntouchableBackground">@color/dark</color>
 
   <color name="selectedFileBackground">#64B5F6</color>
