--- a/clients/android/app/src/main/res/values/colors.xml
+++ b/clients/android/app/src/main/res/values/colors.xml
@@ -15,6 +15,8 @@
   <color name="white">#FFFFFF</color>
   <color name="grey">#787878</color>
 
+  <color name="transparent">#00000000</color>
+
   <color name="drawingUntouchableBackground">@color/grey</color>
   <color name="drawingTouchableBackground">@color/colorPrimaryDark</color>
 
