resolved all warnings except for imports

--- a/clients/android/app/src/main/res/layout/activity_drawing.xml
+++ b/clients/android/app/src/main/res/layout/activity_drawing.xml
@@ -1,49 +1,52 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/drawing_layout"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<layout>
 
-    <app.lockbook.ui.DrawingView
-        android:id="@+id/drawing_view"
+    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/drawing_layout"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_height="match_parent">
 
-    <FrameLayout
-        android:id="@+id/drawing_frame_layout"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_gravity="center"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-
-        <ProgressBar
-            android:id="@+id/drawing_progress_bar"
-            style="?android:attr/progressBarStyleHorizontal"
+        <app.lockbook.ui.DrawingView
+            android:id="@+id/drawing_view"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:indeterminate="true"
-            android:minHeight="20dp"
-            android:background="@color/colorPrimaryDark"
-            android:translationZ="2dp"/>
+            android:layout_height="0dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-        <View
-            android:id="@+id/drawing_loading_view"
+        <FrameLayout
+            android:id="@+id/drawing_frame_layout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@color/colorPrimaryDark"
-            android:translationZ="1dp" />
+            android:layout_gravity="center"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
 
-        <include
-            layout="@layout/toolbar_drawing" />
+            <ProgressBar
+                android:id="@+id/drawing_progress_bar"
+                style="?android:attr/progressBarStyleHorizontal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/colorPrimaryDark"
+                android:indeterminate="true"
+                android:minHeight="20dp"
+                android:translationZ="2dp" />
 
-    </FrameLayout>
-</androidx.constraintlayout.widget.ConstraintLayout>
+            <View
+                android:id="@+id/drawing_loading_view"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@color/colorPrimaryDark"
+                android:translationZ="1dp" />
+
+            <include
+                android:id="@+id/drawing_toolbar"
+                layout="@layout/toolbar_drawing" />
+
+        </FrameLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
