--- a/clients/android/app/src/main/res/layout/activity_list_files.xml
+++ b/clients/android/app/src/main/res/layout/activity_list_files.xml
@@ -1,25 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/list_files_activity_layout"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:gravity="center"
-    android:orientation="vertical"
-    tools:context=".screen.WelcomeActivity">
+<layout>
 
-    <androidx.appcompat.widget.Toolbar
-        android:id="@+id/list_files_toolbar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:minHeight="?attr/actionBarSize"
-        android:theme="@style/Main.Widget.Actionbar" />
-
-    <androidx.fragment.app.FragmentContainerView
-        android:id="@+id/files_fragment"
-        android:name="app.lockbook.screen.ListFilesFragment"
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:id="@+id/list_files_activity_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:layout="@layout/fragment_list_files" />
+        android:gravity="center"
+        android:orientation="vertical"
+        tools:context=".screen.WelcomeActivity">
 
-</LinearLayout>
+        <androidx.appcompat.widget.Toolbar
+            android:id="@+id/list_files_toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:minHeight="?attr/actionBarSize"
+            android:theme="@style/Main.Widget.Actionbar" />
+
+        <androidx.fragment.app.FragmentContainerView
+            android:id="@+id/files_fragment"
+            android:name="app.lockbook.screen.ListFilesFragment"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            tools:layout="@layout/fragment_list_files" />
+
+    </LinearLayout>
+</layout>
