--- a/clients/android/app/src/main/res/layout/dialog_file_info.xml
+++ b/clients/android/app/src/main/res/layout/dialog_file_info.xml
@@ -1,58 +1,60 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:padding="5dp"
-    style="@style/Main.Widget.Dialog"
-    android:orientation="vertical">
+<layout>
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        style="@style/Main.Text.Medium"
-        android:text="@string/popup_info_title"/>
-
-    <TextView
-        android:id="@+id/popup_info_name"
-        style="@style/Main.Text.Small"
-        android:text="@string/default_value"
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        style="@style/Main.Widget.Dialog"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:fontFamily="monospace"
-        android:paddingBottom="15dp" />
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:padding="5dp">
 
-    <TextView
-        android:id="@+id/popup_info_id"
-        style="@style/Main.Text.Small"
-        android:text="@string/default_value"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingBottom="15dp" />
+        <TextView
+            style="@style/Main.Text.Medium"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:text="@string/popup_info_title" />
 
-    <TextView
-        android:id="@+id/popup_info_file_type"
-        style="@style/Main.Text.Small"
-        android:text="@string/default_value"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingBottom="15dp" />
+        <TextView
+            android:id="@+id/popup_info_name"
+            style="@style/Main.Text.Small"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:fontFamily="monospace"
+            android:paddingBottom="15dp"
+            android:text="@string/default_value" />
 
-    <TextView
-        android:id="@+id/popup_info_metadata_version"
-        style="@style/Main.Text.Small"
-        android:text="@string/default_value"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingBottom="15dp" />
+        <TextView
+            android:id="@+id/popup_info_id"
+            style="@style/Main.Text.Small"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingBottom="15dp"
+            android:text="@string/default_value" />
 
-    <TextView
-        android:id="@+id/popup_info_content_version"
-        style="@style/Main.Text.Small"
-        android:text="@string/default_value"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingBottom="15dp" />
+        <TextView
+            android:id="@+id/popup_info_file_type"
+            style="@style/Main.Text.Small"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingBottom="15dp"
+            android:text="@string/default_value" />
 
-</LinearLayout>
+        <TextView
+            android:id="@+id/popup_info_metadata_version"
+            style="@style/Main.Text.Small"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingBottom="15dp"
+            android:text="@string/default_value" />
+
+        <TextView
+            android:id="@+id/popup_info_content_version"
+            style="@style/Main.Text.Small"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingBottom="15dp"
+            android:text="@string/default_value" />
+
+    </LinearLayout>
+</layout>
