--- a/clients/android/app/src/main/res/layout/activity_text_editor.xml
+++ b/clients/android/app/src/main/res/layout/activity_text_editor.xml
@@ -1,135 +1,138 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/text_editor_layout"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:paddingHorizontal="5dp">
+<layout>
 
-    <androidx.appcompat.widget.Toolbar
-        android:id="@+id/text_editor_toolbar"
+    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:id="@+id/text_editor_layout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:minHeight="?attr/actionBarSize"
-        android:theme="@style/Main.Widget.Actionbar"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:layout_editor_absoluteX="5dp" />
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:paddingHorizontal="5dp">
 
-    <ScrollView
-        android:id="@+id/text_editor_scroller"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:fillViewport="true"
-        app:layout_constraintBottom_toTopOf="@+id/markdown_toolbar"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/text_editor_toolbar">
-
-        <EditText
-            android:id="@+id/text_editor_text_field"
-            style="@style/Main.Text.Small"
+        <androidx.appcompat.widget.Toolbar
+            android:id="@+id/text_editor_toolbar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@null"
-            android:gravity="top|start"
-            android:importantForAutofill="no"
-            android:inputType="textMultiLine|textCapSentences"
-            android:hint="@string/text_editor_hint"
-            android:textColor="@color/textColor" />
+            android:minHeight="?attr/actionBarSize"
+            android:theme="@style/Main.Widget.Actionbar"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:layout_editor_absoluteX="5dp" />
 
-    </ScrollView>
-
-    <androidx.appcompat.widget.Toolbar
-        android:id="@+id/markdown_toolbar"
-        android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
-        android:visibility="gone"
-        app:layout_constraintBottom_toBottomOf="parent">
-
-        <LinearLayout
+        <ScrollView
+            android:id="@+id/text_editor_scroller"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:gravity="center"
-            android:orientation="horizontal">
+            android:layout_height="0dp"
+            android:fillViewport="true"
+            app:layout_constraintBottom_toTopOf="@+id/markdown_toolbar"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/text_editor_toolbar">
 
-            <ImageButton
-                android:id="@+id/menu_markdown_title"
-                android:layout_width="wrap_content"
+            <EditText
+                android:id="@+id/text_editor_text_field"
+                style="@style/Main.Text.Small"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginHorizontal="10dp"
-                style="@style/Main.Widget.RegularImageButton"
-                android:contentDescription="@string/menu_markdown_title"
-                android:src="@drawable/ic_baseline_title_24" />
+                android:background="@null"
+                android:gravity="top|start"
+                android:hint="@string/text_editor_hint"
+                android:importantForAutofill="no"
+                android:inputType="textMultiLine|textCapSentences"
+                android:textColor="@color/textColor" />
 
-            <ImageButton
-                android:id="@+id/menu_markdown_bold"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginHorizontal="10dp"
-                style="@style/Main.Widget.RegularImageButton"
-                android:contentDescription="@string/menu_markdown_bold"
-                android:src="@drawable/ic_baseline_format_bold_24" />
+        </ScrollView>
 
-            <ImageButton
-                android:id="@+id/menu_markdown_italics"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginHorizontal="10dp"
-                android:contentDescription="@string/menu_markdown_italics"
-                style="@style/Main.Widget.RegularImageButton"
-                android:src="@drawable/ic_baseline_format_italic_24" />
-
-            <ImageButton
-                android:id="@+id/menu_markdown_image"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginHorizontal="10dp"
-                android:contentDescription="@string/menu_markdown_image"
-                style="@style/Main.Widget.RegularImageButton"
-                android:src="@drawable/ic_baseline_image_24" />
-
-            <ImageButton
-                android:id="@+id/menu_markdown_link"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginHorizontal="10dp"
-                android:contentDescription="@string/menu_markdown_link"
-                style="@style/Main.Widget.RegularImageButton"
-                android:src="@drawable/ic_baseline_link_24" />
-
-            <ImageButton
-                android:id="@+id/menu_markdown_code"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginHorizontal="10dp"
-                style="@style/Main.Widget.RegularImageButton"
-                android:contentDescription="@string/menu_markdown_code"
-                android:src="@drawable/ic_baseline_code_24" />
-
-        </LinearLayout>
-
-    </androidx.appcompat.widget.Toolbar>
-
-    <ScrollView
-        android:id="@+id/markdown_viewer_scroller"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:visibility="gone"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/text_editor_toolbar">
-
-        <TextView
-            android:id="@+id/markdown_viewer"
-            style="@style/Main.Text.Medium"
+        <androidx.appcompat.widget.Toolbar
+            android:id="@+id/markdown_toolbar"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="top|start" />
+            android:layout_height="?attr/actionBarSize"
+            android:visibility="gone"
+            app:layout_constraintBottom_toBottomOf="parent">
 
-    </ScrollView>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:orientation="horizontal">
+
+                <ImageButton
+                    android:id="@+id/menu_markdown_title"
+                    style="@style/Main.Widget.RegularImageButton"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="10dp"
+                    android:contentDescription="@string/menu_markdown_title"
+                    android:src="@drawable/ic_baseline_title_24" />
+
+                <ImageButton
+                    android:id="@+id/menu_markdown_bold"
+                    style="@style/Main.Widget.RegularImageButton"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="10dp"
+                    android:contentDescription="@string/menu_markdown_bold"
+                    android:src="@drawable/ic_baseline_format_bold_24" />
+
+                <ImageButton
+                    android:id="@+id/menu_markdown_italics"
+                    style="@style/Main.Widget.RegularImageButton"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="10dp"
+                    android:contentDescription="@string/menu_markdown_italics"
+                    android:src="@drawable/ic_baseline_format_italic_24" />
+
+                <ImageButton
+                    android:id="@+id/menu_markdown_image"
+                    style="@style/Main.Widget.RegularImageButton"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="10dp"
+                    android:contentDescription="@string/menu_markdown_image"
+                    android:src="@drawable/ic_baseline_image_24" />
+
+                <ImageButton
+                    android:id="@+id/menu_markdown_link"
+                    style="@style/Main.Widget.RegularImageButton"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="10dp"
+                    android:contentDescription="@string/menu_markdown_link"
+                    android:src="@drawable/ic_baseline_link_24" />
+
+                <ImageButton
+                    android:id="@+id/menu_markdown_code"
+                    style="@style/Main.Widget.RegularImageButton"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="10dp"
+                    android:contentDescription="@string/menu_markdown_code"
+                    android:src="@drawable/ic_baseline_code_24" />
+
+            </LinearLayout>
+
+        </androidx.appcompat.widget.Toolbar>
+
+        <ScrollView
+            android:id="@+id/markdown_viewer_scroller"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:visibility="gone"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/text_editor_toolbar">
+
+            <TextView
+                android:id="@+id/markdown_viewer"
+                style="@style/Main.Text.Medium"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="top|start" />
+
+        </ScrollView>
 
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
