--- a/clients/android/app/src/main/res/layout/dialog_rename_file.xml
+++ b/clients/android/app/src/main/res/layout/dialog_rename_file.xml
@@ -1,53 +1,55 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_gravity="center"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:id="@+id/rename_file_layout"
-    style="@style/Main.Widget.Dialog"
-    android:orientation="vertical">
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        style="@style/Main.Text.Medium"
-        android:fontFamily="sans-serif"
-        android:paddingTop="8dp"
-        android:textAlignment="center"
-        android:text="@string/dialog_rename_file_title" />
-
-    <EditText
-        android:id="@+id/rename_file"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:layout_marginLeft="4dp"
-        android:layout_marginRight="4dp"
-        android:layout_marginBottom="4dp"
-        android:hint="@string/dialog_file_name"
-        style="@style/Main.Text.Small"
-        android:inputType="text"
-        android:importantForAutofill="no"
-        android:imeOptions="actionDone" />
+<layout xmlns:android="http://schemas.android.com/apk/res/android">
 
     <LinearLayout
+        android:id="@+id/rename_file_layout"
+        style="@style/Main.Widget.Dialog"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:gravity="end">
+        android:layout_gravity="center"
+        android:orientation="vertical">
 
-        <Button
-            android:id="@+id/rename_file_cancel"
-            style="@style/Main.Button.Borderless.Colored"
-            android:text="@string/cancel" />
+        <TextView
+            style="@style/Main.Text.Medium"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:fontFamily="sans-serif"
+            android:paddingTop="8dp"
+            android:text="@string/dialog_rename_file_title"
+            android:textAlignment="center" />
 
-        <Button
-            android:id="@+id/rename_file_rename"
-            style="@style/Main.Button.Borderless.Colored"
-            android:text="@string/rename_file_rename" />
+        <EditText
+            android:id="@+id/rename_file"
+            style="@style/Main.Text.Small"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="4dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginRight="4dp"
+            android:layout_marginBottom="4dp"
+            android:hint="@string/dialog_file_name"
+            android:imeOptions="actionDone"
+            android:importantForAutofill="no"
+            android:inputType="text" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="end"
+            android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/rename_file_cancel"
+                style="@style/Main.Button.Borderless.Colored"
+                android:text="@string/cancel" />
+
+            <Button
+                android:id="@+id/rename_file_rename"
+                style="@style/Main.Button.Borderless.Colored"
+                android:text="@string/rename_file_rename" />
+        </LinearLayout>
+
+
     </LinearLayout>
 
-
-</LinearLayout>
+</layout>
