--- a/clients/android/app/src/main/res/layout/splash_screen.xml
+++ b/clients/android/app/src/main/res/layout/splash_screen.xml
@@ -1,44 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/splash_screen"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<layout>
 
-    <ProgressBar
-        android:id="@+id/migrate_progress_bar"
-        android:visibility="gone"
-        style="?android:attr/progressBarStyleLarge"
+    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/splash_screen"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:indeterminate="true"
-        android:minHeight="20dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/splash_screen_image" />
+        android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/splash_screen_text"
-        style="@style/Main.Text.Headline"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/lockbook_title"
-        app:layout_constraintBottom_toTopOf="@+id/splash_screen_image"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_chainStyle="packed" />
+        <ProgressBar
+            android:id="@+id/migrate_progress_bar"
+            style="?android:attr/progressBarStyleLarge"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:indeterminate="true"
+            android:minHeight="20dp"
+            android:visibility="gone"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/splash_screen_image" />
+
+        <TextView
+            android:id="@+id/splash_screen_text"
+            style="@style/Main.Text.Headline"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/lockbook_title"
+            app:layout_constraintBottom_toTopOf="@+id/splash_screen_image"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_chainStyle="packed" />
 
 
-    <androidx.appcompat.widget.AppCompatImageView
-        android:id="@+id/splash_screen_image"
-        android:layout_width="250dp"
-        android:layout_height="300dp"
-        android:src="@drawable/foreground_dark_01"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/splash_screen_text" />
+        <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/splash_screen_image"
+            android:layout_width="250dp"
+            android:layout_height="300dp"
+            android:src="@drawable/foreground_dark_01"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/splash_screen_text" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
