--- a/clients/android/app/src/main/res/layout/dialog_rename_file.xml
+++ b/clients/android/app/src/main/res/layout/dialog_rename_file.xml
@@ -1,55 +1,51 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/rename_file_layout"
+    style="@style/Main.Widget.Dialog"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_gravity="center"
+    android:orientation="vertical">
 
-    <LinearLayout
-        android:id="@+id/rename_file_layout"
-        style="@style/Main.Widget.Dialog"
+    <TextView
+        style="@style/Main.Text.Medium"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:orientation="vertical">
+        android:fontFamily="sans-serif"
+        android:paddingTop="8dp"
+        android:text="@string/dialog_rename_file_title"
+        android:textAlignment="center" />
 
-        <TextView
-            style="@style/Main.Text.Medium"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:fontFamily="sans-serif"
-            android:paddingTop="8dp"
-            android:text="@string/dialog_rename_file_title"
-            android:textAlignment="center" />
+    <EditText
+        android:id="@+id/rename_file"
+        style="@style/Main.Text.Small"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="4dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginRight="4dp"
+        android:layout_marginBottom="4dp"
+        android:hint="@string/dialog_file_name"
+        android:imeOptions="actionDone"
+        android:importantForAutofill="no"
+        android:inputType="text" />
 
-        <EditText
-            android:id="@+id/rename_file"
-            style="@style/Main.Text.Small"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="4dp"
-            android:layout_marginTop="16dp"
-            android:layout_marginRight="4dp"
-            android:layout_marginBottom="4dp"
-            android:hint="@string/dialog_file_name"
-            android:imeOptions="actionDone"
-            android:importantForAutofill="no"
-            android:inputType="text" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="end"
+        android:orientation="horizontal">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="end"
-            android:orientation="horizontal">
+        <Button
+            android:id="@+id/rename_file_cancel"
+            style="@style/Main.Button.Borderless.Colored"
+            android:text="@string/cancel" />
 
-            <Button
-                android:id="@+id/rename_file_cancel"
-                style="@style/Main.Button.Borderless.Colored"
-                android:text="@string/cancel" />
-
-            <Button
-                android:id="@+id/rename_file_rename"
-                style="@style/Main.Button.Borderless.Colored"
-                android:text="@string/rename_file_rename" />
-        </LinearLayout>
-
-
+        <Button
+            android:id="@+id/rename_file_rename"
+            style="@style/Main.Button.Borderless.Colored"
+            android:text="@string/rename_file_rename" />
     </LinearLayout>
 
-</layout>
+
+</LinearLayout>
