--- a/clients/android/app/src/main/res/layout/activity_import_account.xml
+++ b/clients/android/app/src/main/res/layout/activity_import_account.xml
@@ -2,28 +2,28 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/import_account_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center"
     android:orientation="vertical"
     android:paddingHorizontal="25dp"
-    android:id="@+id/import_account_layout"
     tools:context=".screen.WelcomeActivity">
 
     <TextView
+        style="@style/Main.Text.Headline"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingBottom="20dp"
-        android:text="@string/lockbook_import"
-        style="@style/Main.Text.Headline" />
+        android:text="@string/lockbook_import" />
 
     <ImageButton
         android:id="@+id/qr_import_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="?android:selectableItemBackground"
-        app:srcCompat="@drawable/ic_baseline_qr_code_scanner_24"
-        android:contentDescription="@string/qr_code_content_description"/>
+        android:contentDescription="@string/qr_code_content_description"
+        app:srcCompat="@drawable/ic_baseline_qr_code_scanner_24" />
 
     <EditText
         android:id="@+id/text_import_account_string"
@@ -32,9 +32,9 @@
         android:layout_marginBottom="20dp"
         android:fontFamily="monospace"
         android:hint="@string/import_description"
+        android:imeOptions="actionDone"
         android:importantForAutofill="no"
-        android:inputType="textVisiblePassword"
-        android:imeOptions="actionDone" />
+        android:inputType="textVisiblePassword" />
 
     <Button
         android:id="@+id/import_lockbook"
@@ -47,8 +47,8 @@
         style="?android:attr/progressBarStyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:visibility="gone"
         android:indeterminate="true"
-        android:minHeight="20dp" />
+        android:minHeight="20dp"
+        android:visibility="gone" />
 
 </LinearLayout>
