--- a/clients/android/app/src/main/res/layout/activity_new_account.xml
+++ b/clients/android/app/src/main/res/layout/activity_new_account.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/new_account_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center"
     android:orientation="vertical"
-    android:id="@+id/new_account_layout"
     android:paddingHorizontal="25dp">
 
     <TextView
@@ -56,9 +56,9 @@
         android:layout_marginBottom="20dp"
         android:fontFamily="monospace"
         android:hint="@string/new_account_username"
+        android:imeOptions="actionDone"
         android:importantForAutofill="no"
-        android:inputType="textVisiblePassword"
-        android:imeOptions="actionDone" />
+        android:inputType="textVisiblePassword" />
 
 
     <Button
@@ -69,10 +69,10 @@
     <ProgressBar
         android:id="@+id/new_account_progress_bar"
         style="?android:attr/progressBarStyle"
-        android:visibility="gone"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:indeterminate="true"
-        android:minHeight="20dp" />
+        android:minHeight="20dp"
+        android:visibility="gone" />
 
 </LinearLayout>
