consolidating shared pref keys and other opimizations

--- a/clients/android/app/src/main/res/layout/fragment_list_files.xml
+++ b/clients/android/app/src/main/res/layout/fragment_list_files.xml
@@ -61,46 +61,9 @@
             android:text="@string/empty_folder"
             android:visibility="gone" />
 
-        <LinearLayout
-            android:id="@+id/list_files_fab_holder"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="bottom|end"
-            android:gravity="center"
-            android:orientation="vertical">
+        <include
+            android:id="@+id/fabs_new_file"
+            layout="@layout/fabs_new_file" />
 
-            <com.google.android.material.floatingactionbutton.FloatingActionButton
-                android:id="@+id/list_files_fab_drawing"
-                style="@style/Main.Widget.FAB"
-                android:contentDescription="@string/list_files_create_document"
-                android:src="@drawable/ic_baseline_border_color_24"
-                android:visibility="gone" />
-
-            <com.google.android.material.floatingactionbutton.FloatingActionButton
-                android:id="@+id/list_files_fab_document"
-                style="@style/Main.Widget.FAB"
-                android:contentDescription="@string/list_files_create_document"
-                android:src="@drawable/ic_baseline_insert_drive_file_24"
-                android:visibility="gone" />
-
-            <com.google.android.material.floatingactionbutton.FloatingActionButton
-                android:id="@+id/list_files_fab_folder"
-                style="@style/Main.Widget.FAB"
-                android:contentDescription="@string/list_files_create_folder"
-                android:src="@drawable/round_folder_white_18dp"
-                android:visibility="gone" />
-
-            <com.google.android.material.floatingactionbutton.FloatingActionButton
-                android:id="@+id/list_files_fab"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="10dp"
-                android:contentDescription="@string/list_files_create_file"
-                android:src="@drawable/ic_baseline_add_24"
-                app:backgroundTint="@color/colorPrimary"
-                app:rippleColor="@color/colorPrimaryDark"
-                app:tint="@color/white" />
-
-        </LinearLayout>
     </FrameLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
